--- a/.travis.yml
+++ b/.travis.yml
@@ -50,12 +50,15 @@ before_install:
     fi
 script:
   - rustc --version
-  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.4" ]; then
+  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.14" ]; then
     make regen_check;
     fi
   - ./check_init_asserts
-  - cargo doc --features "dox"
-  - cargo test --features "$FEATURES"
+  - cargo doc --features "dox,embed-lgpl-docs"
+  - cargo test --features "$FEATURES,embed-lgpl-docs"
+  # catch any sneaked in lgpl docs
+  - cargo build --features "$FEATURES,purge-lgpl-docs" --jobs 1
+  - git diff -R --exit-code
   - rustc --version
   - mkdir .cargo
   - echo 'paths = ["."]' > .cargo/config
