--- a/.travis.yml
+++ b/.travis.yml
@@ -53,8 +53,11 @@ script:
   - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.14" ]; then
     make regen_check;
     fi
-  - cargo doc --features "dox"
-  - cargo test --features "$FEATURES"
+  - cargo doc --features "dox,embed-lgpl-docs"
+  - cargo test --features "$FEATURES,embed-lgpl-docs"
+  # catch any sneaked in lgpl docs
+  - cargo build --features "$FEATURES,purge-lgpl-docs" --jobs 1
+  - git diff -R --exit-code
   - rustc --version
   - mkdir .cargo
   - echo 'paths = ["."]' > .cargo/config
