--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,19 @@
+dist: xenial
 language: rust
 rust:
   - nightly
   - beta
-  - 1.28.0 # stable
+  - 1.31.0 # stable
 env:
-  - GTK=3.4
-  - GTK=3.18
+  - GTK=3.14
+  - GTK=3.24
 addons:
   apt:
     packages:
     - libgtk-3-dev
 script:
   - rustc --version
-  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.4" ]; then
+  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.14" ]; then
     make regen_check;
     fi
   - mkdir .cargo
