cairo: Drop v1_12 feature and make 1.12 the minimum supported version
It's from 2012!

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,37 +7,37 @@ matrix:
       env: GTK=3.14 FEATURES=
     - os: linux
       rust: nightly
-      env: GTK=3.24 FEATURES=v1_12
+      env: GTK=3.24 FEATURES=
     - os: linux
       rust: beta
       env: GTK=3.14 FEATURES=
     - os: linux
       rust: beta
-      env: GTK=3.24 FEATURES=v1_12
+      env: GTK=3.24 FEATURES=
     - os: linux
       rust: 1.31.0
       env: GTK=3.14 FEATURES=
     - os: linux
       rust: 1.31.0
-      env: GTK=3.24 FEATURES=v1_12
+      env: GTK=3.24 FEATURES=
     - os: osx
       rust: nightly
       env: GTK=3.14 FEATURES=
     # - os: osx
     #   rust: nightly
-    #   env: GTK=3.24 FEATURES=v1_12
+    #   env: GTK=3.24 FEATURES=
     - os: osx
       rust: beta
       env: GTK=3.14 FEATURES=
     # - os: osx
     #   rust: beta
-    #   env: GTK=3.24 FEATURES=v1_12
+    #   env: GTK=3.24 FEATURES=
     - os: osx
       rust: stable
       env: GTK=3.14 FEATURES=
     # - os: osx
     #   rust: stable
-    #   env: GTK=3.24 FEATURES=v1_12
+    #   env: GTK=3.24 FEATURES=
 sudo: true
 addons:
   apt:
