--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ svg = ["cairo-sys-rs/svg"]
 ps = ["cairo-sys-rs/ps"]
 use_glib = ["glib", "glib-sys", "gobject-sys", "cairo-sys-rs/use_glib"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
+v1_14 = ["cairo-sys-rs/v1_14"]
+v1_16 = ["v1_14", "cairo-sys-rs/v1_16"]
 default = ["use_glib"]
 xcb = ["cairo-sys-rs/xcb"]
 dox = ["cairo-sys-rs/dox", "glib/dox"]
