--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
   apt:
     packages:
     - libgtk-3-dev
+    - libmount-dev
 script:
   - rustc --version
   - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.14" ]; then
