--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ homepage = "http://gtk-rs.org/"
 authors = ["The Gtk-rs Project Developers"]
 keywords = ["graphene", "gtk", "gtk-rs", "gnome", "GUI"]
 readme = "README.md"
-documentation = "http://gtk-rs.org/docs/gdk/"
+documentation = "http://gtk-rs.org/docs/graphene/"
 version = "0.10.0"
 description = "Rust bindings for the Graphene library"
 repository = "https://github.com/gtk-rs/graphene"
