--- a/Gir.toml
+++ b/Gir.toml
@@ -25,13 +25,53 @@ status = "generate"
     name = "alloc"
     ignore = true
     [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_box"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
     name = "init_from_points"
     #array with size
     ignore = true
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec3"
+        [object.function.return]
+        type = "none"
     [[object.function]]
     name = "init_from_vectors"
     #array with size
     ignore = true
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "zero"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "one"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "minus_one"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "one_minus_one"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "empty"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "infinite"
+        [object.function.return]
+        nullable = false
 
 [[object]]
 name = "Graphene.Euler"
@@ -40,6 +80,30 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_with_order"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_matrix"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_quaternion"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec3"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_euler"
+        [object.function.return]
+        type = "none"
 
 [[object]]
 name = "Graphene.Frustum"
@@ -48,6 +112,18 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_frustum"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_matrix"
+        [object.function.return]
+        type = "none"
 
 [[object]]
 name = "Graphene.Matrix"
@@ -56,6 +132,58 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init_identity"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_float"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec4"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_matrix"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_2d"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_perspective"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_ortho"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_look_at"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_frustum"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_scale"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_translate"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_rotate"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_skew"
+        [object.function.return]
+        type = "none"
 
 [[object]]
 name = "Graphene.Plane"
@@ -64,6 +192,26 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_plane"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_point"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_points"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec4"
+        [object.function.return]
+        type = "none"
 
 [[object]]
 name = "Graphene.Point3D"
@@ -72,6 +220,22 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_point"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec3"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "zero"
+        [object.function.return]
+        nullable = false
 
 [[object]]
 name = "Graphene.Point"
@@ -80,6 +244,22 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_point"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec2"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "zero"
+        [object.function.return]
+        nullable = false
 
 [[object]]
 name = "Graphene.Quad"
@@ -88,6 +268,18 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_rect"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_points"
+        [object.function.return]
+        type = "none"
 
 [[object]]
 name = "Graphene.Quaternion"
@@ -96,6 +288,42 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_identity"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_quaternion"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec4"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_matrix"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_angles"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_radians"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_angle_vec3"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_euler"
+        [object.function.return]
+        type = "none"
 
 [[object]]
 name = "Graphene.Ray"
@@ -104,6 +332,18 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_ray"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec3"
+        [object.function.return]
+        type = "none"
 
 [[object]]
 name = "Graphene.Rect"
@@ -112,6 +352,18 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_rect"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "zero"
+        [object.function.return]
+        nullable = false
 
 [[object]]
 # missing memory management functions
@@ -130,6 +382,18 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_size"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "zero"
+        [object.function.return]
+        nullable = false
 
 [[object]]
 name = "Graphene.Sphere"
@@ -139,13 +403,21 @@ status = "generate"
     name = "alloc"
     ignore = true
     [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
     name = "init_from_points"
     #array with size
     ignore = true
+        [object.function.return]
+        type = "none"
     [[object.function]]
     name = "init_from_vectors"
     #array with size
     ignore = true
+        [object.function.return]
+        type = "none"
 
 [[object]]
 name = "Graphene.Triangle"
@@ -154,6 +426,14 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init_from_point3d"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec3"
+        [object.function.return]
+        type = "none"
 
 [[object]]
 name = "Graphene.Vec2"
@@ -162,6 +442,30 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec2"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "one"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "x_axis"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "y_axis"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "zero"
+        [object.function.return]
+        nullable = false
 
 [[object]]
 name = "Graphene.Vec3"
@@ -170,6 +474,34 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec3"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "one"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "x_axis"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "y_axis"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "z_axis"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "zero"
+        [object.function.return]
+        nullable = false
 
 [[object]]
 name = "Graphene.Vec4"
@@ -178,3 +510,43 @@ status = "generate"
     # contents undefined
     name = "alloc"
     ignore = true
+    [[object.function]]
+    name = "init"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec2"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec3"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "init_from_vec4"
+        [object.function.return]
+        type = "none"
+    [[object.function]]
+    name = "one"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "w_axis"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "x_axis"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "y_axis"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "z_axis"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "zero"
+        [object.function.return]
+        nullable = false
