--- a/Gir.toml
+++ b/Gir.toml
@@ -31,6 +31,7 @@ ignore = [
 
 manual = [
     "GLib.Bytes",
+    "GLib.ByteArray",
     "GLib.Error",
     "GLib.Variant",
     "GLib.VariantType",
