gio: Add support for subclassing gio::Application
Based on code by Dirk Van Haerenborgh @vhdirk from https://github.com/gtk-rs/gobject-subclass

--- a/Gir.toml
+++ b/Gir.toml
@@ -200,6 +200,7 @@ status = "generate"
 [[object]]
 name = "Gio.Application"
 status = "generate"
+subclassing = true
 manual_traits = ["ApplicationExtManual"]
     [[object.signal]]
     name = "open"
