--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ dox = ["gio-sys/dox", "glib/dox"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
 futures = ["futures-preview", "glib/futures"]
+subclassing = ["glib/subclassing"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
