gio: SocketListener::accept_async() can return None for the Object
Fixes https://github.com/gtk-rs/gio/issues/99

--- a/Gir.toml
+++ b/Gir.toml
@@ -665,6 +665,11 @@ manual_traits = ["SocketListenerExtManual"]
     # finish function misses nullable return annotation
     ignore = true
 
+    [[object.function]]
+    name = "accept_async"
+    # finish function misses nullable return annotation
+    ignore = true
+
 [[object]]
 name = "Gio.Subprocess"
 status = "generate"
