pangocairo: Fix docs for manual functions [ci skip]

--- a/Gir.toml
+++ b/Gir.toml
@@ -103,9 +103,11 @@ status = "generate"
 [[object]]
 name = "PangoCairo.FontMap"
 status = "generate"
+manual_traits = ["FontMapExtManual"]
     [[object.function]]
     name = "get_font_type"
     ignore = true
+    doc_trait_name = "FontMapExtManual"
     [[object.function]]
     name = "new_for_font_type"
     ignore = true
