glib: New version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ v2_52 = ["v2_50", "glib-sys/v2_52"]
 v2_54 = ["v2_52", "glib-sys/v2_54", "gobject-sys/v2_54"]
 v2_56 = ["v2_54", "glib-sys/v2_56"]
 v2_58 = ["v2_56", "glib-sys/v2_58"]
+v2_60 = ["v2_58", "glib-sys/v2_60"]
 futures = ["futures-preview"]
 subclassing = []
 dox = ["glib-sys/dox", "gobject-sys/dox"]
