--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ v2_52 = ["v2_50", "gio-sys/v2_52", "glib/v2_52"]
 v2_54 = ["v2_52", "gio-sys/v2_54", "glib/v2_54"]
 v2_56 = ["v2_54", "gio-sys/v2_56", "glib/v2_56"]
 v2_58 = ["v2_56", "gio-sys/v2_58", "glib/v2_58"]
+v2_60 = ["v2_58", "gio-sys/v2_60", "glib/v2_60"]
 dox = ["gio-sys/dox", "glib/dox"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
