--- a/atk-sys/Cargo.toml
+++ b/atk-sys/Cargo.toml
@@ -33,3 +33,6 @@ links = "atk"
 name = "atk-sys"
 repository = "https://github.com/gtk-rs/sys"
 version = "0.9.0"
+
+["package.metadata.docs.rs"]
+features = ["dox", "v2_32"]
