--- a/glib-sys/Cargo.toml
+++ b/glib-sys/Cargo.toml
@@ -34,3 +34,6 @@ links = "glib"
 name = "glib-sys"
 repository = "https://github.com/gtk-rs/sys"
 version = "0.9.0"
+
+["package.metadata.docs.rs"]
+features = ["dox", "v2_60"]
