--- a/gobject-sys/Cargo.toml
+++ b/gobject-sys/Cargo.toml
@@ -32,3 +32,6 @@ links = "gobject"
 name = "gobject-sys"
 repository = "https://github.com/gtk-rs/sys"
 version = "0.9.0"
+
+["package.metadata.docs.rs"]
+features = ["dox", "v2_58"]
