--- a/gtk4-sys/Cargo.toml
+++ b/gtk4-sys/Cargo.toml
@@ -55,3 +55,6 @@ links = "gtk4"
 name = "gtk4-sys"
 repository = "https://github.com/gtk-rs/sys"
 version = "0.1.0"
+
+["package.metadata.docs.rs"]
+features = ["dox"]
