--- a/gdk-sys/Cargo.toml
+++ b/gdk-sys/Cargo.toml
@@ -48,3 +48,6 @@ links = "gdk"
 name = "gdk-sys"
 repository = "https://github.com/gtk-rs/sys"
 version = "0.9.0"
+
+["package.metadata.docs.rs"]
+features = ["dox", "v3_24"]
