sys: Remove graphene
graphene is now in its own repo.

--- a/gsk4-sys/Cargo.toml
+++ b/gsk4-sys/Cargo.toml
@@ -17,7 +17,7 @@ path = "../glib-sys"
 path = "../gobject-sys"
 
 [dependencies.graphene-sys]
-path = "../graphene-sys"
+git = "https://github.com/gtk-rs/graphene"
 
 [dependencies.pango-sys]
 path = "../pango-sys"
