pangocairo: Improve docs.rs documentation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ dox = ["glib/dox", "pango/dox", "cairo-rs/dox"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/purge-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/embed-lgpl-docs"]
 
+["package.metadata.docs.rs"]
+features = ["dox", "embed-lgpl-docs"]
+
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
 optional = true
