gio: Add "futures" to "dox" to use optional "futures_preview"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ v2_54 = ["v2_52", "gio-sys/v2_54", "glib/v2_54"]
 v2_56 = ["v2_54", "gio-sys/v2_56", "glib/v2_56"]
 v2_58 = ["v2_56", "gio-sys/v2_58", "glib/v2_58"]
 v2_60 = ["v2_58", "gio-sys/v2_60", "glib/v2_60"]
-dox = ["gio-sys/dox", "glib/dox"]
+dox = ["gio-sys/dox", "glib/dox", "futures"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
 futures = ["futures-preview", "glib/futures"]
