--- a/.travis.yml
+++ b/.travis.yml
@@ -4,58 +4,58 @@ matrix:
   include:
     - os: linux
       rust: nightly
-      env: GTK=3.14 FEATURES=subclassing,futures
+      env: GTK=3.14 FEATURES=futures
     - os: linux
       rust: nightly
-      env: GTK=3.24 FEATURES=subclassing,v2_48,futures
+      env: GTK=3.24 FEATURES=v2_48,futures
     - os: linux
       rust: beta
-      env: GTK=3.14 FEATURES=subclassing
+      env: GTK=3.14 FEATURES=
     - os: linux
       rust: beta
-      env: GTK=3.24 FEATURES=subclassing,v2_48
+      env: GTK=3.24 FEATURES=v2_48
     - os: linux
       rust: 1.36.0
-      env: GTK=3.14 FEATURES=subclassing
+      env: GTK=3.14 FEATURES=
     - os: linux
       rust: 1.36.0
-      env: GTK=3.24 FEATURES=subclassing,v2_48
+      env: GTK=3.24 FEATURES=v2_48
     - os: linux
       rust: stable
-      env: GTK=3.14 FEATURES=subclassing
+      env: GTK=3.14 FEATURES=
     - os: linux
       rust: stable
-      env: GTK=3.24 FEATURES=subclassing,v2_48
+      env: GTK=3.24 FEATURES=v2_48
     - os: osx
       rust: nightly
-      env: GTK=3.14 FEATURES=subclassing,futures
+      env: GTK=3.14 FEATURES=futures
     # - os: osx
     #   rust: nightly
-    #   env: GTK=3.24 FEATURES=subclassing,v2_48,futures
+    #   env: GTK=3.24 FEATURES=v2_48,futures
     - os: osx
       rust: beta
-      env: GTK=3.14 FEATURES=subclassing
+      env: GTK=3.14 FEATURES=
     # - os: osx
     #   rust: beta
-    #   env: GTK=3.24 FEATURES=subclassing,v2_48
+    #   env: GTK=3.24 FEATURES=v2_48
     - os: osx
       rust: 1.36.0
-      env: GTK=3.14 FEATURES=subclassing
+      env: GTK=3.14 FEATURES=
     # - os: osx
     #   rust: 1.36.0
-    #   env: GTK=3.24 FEATURES=subclassing,v2_48
+    #   env: GTK=3.24 FEATURES=v2_48
     - os: osx
       rust: stable
-      env: GTK=3.14 FEATURES=subclassing
+      env: GTK=3.14 FEATURES=
     # - os: osx
     #   rust: stable
-    #   env: GTK=3.24 FEATURES=subclassing,v2_48
+    #   env: GTK=3.24 FEATURES=v2_48
     - os: linux
       rust: nightly
-      env: GTK=3.14 FEATURES=subclassing,futures ARM=1 OTHER_TARGET="--target armv7-unknown-linux-gnueabihf"
+      env: GTK=3.14 FEATURES=futures ARM=1 OTHER_TARGET="--target armv7-unknown-linux-gnueabihf"
     - os: linux
       rust: nightly
-      env: GTK=3.24 FEATURES=subclassing,v2_48,futures ARM=1 OTHER_TARGET="--target armv7-unknown-linux-gnueabihf"
+      env: GTK=3.24 FEATURES=v2_48,futures ARM=1 OTHER_TARGET="--target armv7-unknown-linux-gnueabihf"
 addons:
   apt:
     packages:
