gdk: better handling of docs.rs features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ purge-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/purge-lgpl-docs", "gdk-pixbuf/p
 embed-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/embed-lgpl-docs", "gdk-pixbuf/embed-lgpl-docs", "gio/embed-lgpl-docs"]
 
 ["package.metadata.docs.rs"]
-features = ["dox", "embed-lgpl-docs", "v3_24"]
+features = ["dox", "embed-lgpl-docs"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
