--- a/gio-sys/Cargo.toml
+++ b/gio-sys/Cargo.toml
@@ -40,6 +40,5 @@ links = "gio"
 name = "gio-sys"
 repository = "https://github.com/gtk-rs/sys"
 version = "0.9.0"
-
-["package.metadata.docs.rs"]
-features = ["dox", "v2_60"]
+[package.metadata.docs.rs]
+features = ["dox"]
