--- a/glib-sys/Cargo.toml
+++ b/glib-sys/Cargo.toml
@@ -34,6 +34,5 @@ links = "glib"
 name = "glib-sys"
 repository = "https://github.com/gtk-rs/sys"
 version = "0.9.0"
-
-["package.metadata.docs.rs"]
-features = ["dox", "v2_60"]
+[package.metadata.docs.rs]
+features = ["dox"]
