--- a/gdk-pixbuf-sys/Cargo.toml
+++ b/gdk-pixbuf-sys/Cargo.toml
@@ -37,6 +37,5 @@ links = "gdk_pixbuf"
 name = "gdk-pixbuf-sys"
 repository = "https://github.com/gtk-rs/sys"
 version = "0.9.0"
-
-["package.metadata.docs.rs"]
-features = ["dox", "v2_36_8"]
+[package.metadata.docs.rs]
+features = ["dox"]
