--- a/gobject-sys/Cargo.toml
+++ b/gobject-sys/Cargo.toml
@@ -32,6 +32,5 @@ links = "gobject"
 name = "gobject-sys"
 repository = "https://github.com/gtk-rs/sys"
 version = "0.9.0"
-
-["package.metadata.docs.rs"]
-features = ["dox", "v2_58"]
+[package.metadata.docs.rs]
+features = ["dox"]
