cairo: Fix invalid cargo key for docs.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ xlib = ["cairo-sys-rs/xlib"]
 dox = ["cairo-sys-rs/dox", "glib/dox"]
 win32-surface = ["cairo-sys-rs/win32-surface"]
 
-["package.metadata.docs.rs"]
+[package.metadata.docs.rs]
 features = ["dox", "embed-lgpl-docs"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
