glib: Fix invalid cargo key for docs.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,5 +44,5 @@ v2_60 = ["v2_58", "glib-sys/v2_60"]
 futures = ["futures-preview"]
 dox = ["glib-sys/dox", "gobject-sys/dox", "futures"]
 
-["package.metadata.docs.rs"]
+[package.metadata.docs.rs]
 features = ["dox"]
