gio: Change UnixMountPoint getters to not require &mut self
Fixes https://github.com/gtk-rs/gio/issues/245

--- a/Gir.toml
+++ b/Gir.toml
@@ -827,6 +827,21 @@ cfg_condition = "unix"
         [[object.function.parameter]]
         pattern = ".+"
         const = true
+    [[object.function]]
+    pattern = "get_.*"
+        [[object.function.parameter]]
+        pattern = ".+"
+        const = true
+    [[object.function]]
+    pattern = "guess_.*"
+        [[object.function.parameter]]
+        pattern = ".+"
+        const = true
+    [[object.function]]
+    pattern = "is_.*"
+        [[object.function.parameter]]
+        pattern = ".+"
+        const = true
 
 [[object]]
 name = "Gio.UnixOutputStream"
